# AirClean

./: CMakeLists.txt  README.md  gen_certificate  partitions.csv  sdkconfig  server_https.py  server_ipv4.py  server_ipv6.py
main/: CMakeLists.txt  blufi.h  blufi_init.c  blufi_main.c  blufi_security.c  ctags.sh  gatts.c  gatts.h  gtags.sh  i2c.c  i2c.h  i2c_MCP9800.c  i2c_MCP9800.h  oneshot_read_adc_main.c  oneshot_read_adc_main.h  ota.c  ota.h  ping.c  ping.h  remote_log.c  remote_log.h  rtc.c  rtc.h  sensor.c  sensor.h  sntp.c  sntp.h  spi.c  spi.h  tasks.c  tasks.h  tcp_client_v4.c  times.c  times.h
